# logic-analyzer

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
embedded/: .clangd  CMakeLists.txt
embedded/include/: config.hpp  parser.hpp  sampler.hpp
embedded/src/: main.cpp  parser.cpp  read_pin.pio  sampler.cpp
host/: .clangd  CMakeLists.txt
host/include/: elements_of_ui.hpp  fst_parser.hpp  parser.hpp  pico_connect.hpp
host/src/: elements_of_ui.cpp  fst_parser.cpp  main.cpp  parser.cpp  pico_connect.cpp
